apps/email/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service
  namespace: zt-email
  labels:
    app: email-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-service
  template:
    metadata:
      labels:
        app: email-service
    spec:
      serviceAccountName: email-service
      containers:
        - name: email-service
          image: devesh11411/blog-email:v1.0.0
          ports:
            - containerPort: 4003
          livenessProbe:
            httpGet:
              path: /healthz
              port: 4003
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /readyz
              port: 4003
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
