apps/email/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-service
  namespace: zt-email
  labels:
    app: email-service
spec:
  selector:
    app: email-service
  ports:
    - name: http
      port: 4003
      targetPort: 4003
