apps/email/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-email
  namespace: zt-email
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/zt-email/sa/waypoint"

---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-email-waypoint
  namespace: zt-email
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: waypoint
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - zt-auth
    - from:
        - source:
            namespaces:
              - zt-posts
